force-app/main/default/objects/Contact/fields/PITS_Hourly_rate__c.field-meta.xml
<CustomField>
    <fullName>PITS_Hourly_rate__c</fullName>
    <label>PITS Hourly rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>