force-app/main/default/objects/Contact/fields/PITS_Monthly_Cost_to_Company__c.field-meta.xml
<CustomField>
    <fullName>PITS_Monthly_Cost_to_Company__c</fullName>
    <label>PITS Monthly Cost to Company</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>