force-app/main/default/objects/Contact/fields/PITS_Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>PITS_Monthly_Rate__c</fullName>
    <label>PITS Monthly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>